Show top-3 results on UI

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -29,6 +29,7 @@
                     </div>
                     <div class='result-label'>
                         <label id='result-label'></label>
+                        <label id='top3-result-label'></label>
                     </div>
                 </div>
             </div>
