Introduce PlantDoc and plant diseases supported now

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,14 +1,19 @@
 <html lang='en'>
     <head>
         <meta charset='utf-8'>
+        <title>PlantDoc - the digital plant doctor</title>
         <link rel='stylesheet' href='../static/style.css'>
         <script src='../static/client.js'></script>
     </head>
     <body>
         <div>
             <div class='center'>
-                <div class='title'>Plant Disease Detector</div>
+                <div class='title'>PlantDoc - the digital plant doctor</div>
                 <div class='content'>
+                    <div class='help'>
+                        <h3>PlanDoc is your reliable partner for these plant diseases:</h3>
+                        <img src="../static/images/plant_doc_banner.png" alt="Plant diseases" height="300">
+                    </div>
                     <div class='no-display'>
                         <input id='file-input'
                             class='no-display'
