--- a/app/view/index.html
+++ b/app/view/index.html
@@ -36,6 +36,9 @@
                         <label id='result-label'></label>
                         <label id='top3-result-label'></label>
                     </div>
+                    <div class='footer'>
+                        <footer>Made with ❤️ by Cedric Chee. <a href='https://github.com/cedrickchee/pytorch-serving'>View on GitHub</a>.</footer>
+                    </div>
                 </div>
             </div>
         </div>
